# plsdo

./: Cargo.toml  README.md  deploy.sh  ytdl-run.sh
define_scripts_macro/: Cargo.toml
define_scripts_macro/src/: lib.rs
define_subcommands_macro/: Cargo.toml
define_subcommands_macro/src/: lib.rs
src/: constants.rs  lib.rs  main.rs  menus.rs  scripts.rs  system_atlas.rs  util.rs
src/menus/: keyboard_layout.rs  power.rs
src/scripts/: brightness.rs  eww.rs  font_family.rs  font_size.rs  game.rs  keyboard_layout.rs  playerctl.rs  power.rs
src/subcommands/: brightness.rs  colortemp.rs  eww.rs  font_family.rs  font_size.rs  game.rs  keyboard_layout.rs  mod.rs  playerctl.rs  power.rs  screenshot.rs  torrent.rs  volume.rs  workspace.rs  ytdl.rs
src/subcommands/audio/: listener.rs  mod.rs  state.rs
src/subcommands/keyboard/: mod.rs  xkb.rs
src/subcommands/workspace/: listener.rs  mod.rs
src/subcommands/ytdl/: aggregator.rs  downloader.rs  message.rs  mod.rs  progress_server.rs  test_macros.rs  ytdl_line.rs
src/util/: dmenu.rs  listener.rs  mod.rs
tests/: socket.rs
tests/inputs/: emulated_file1
